--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
   margin: 0;
   padding: 0;
   box-sizing: inherit;
+  /* overflow-x: hidden; */
 }
 
 html {
@@ -60,6 +61,7 @@ body {
 }
 
 .section__header {
+  /* overflow-y: hidden; */
   font-size: 4rem;
   line-height: 1.3;
   font-weight: 500;
@@ -662,7 +664,7 @@ h4 {
 }
 
 /* COOKIE MESSAGE */
-.cookie-message {
+.cookie {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
